# MMD2_Project

agent-probe-monitor/: .gitignore  Expectation.md  README.md  pyproject.toml
agent-probe-monitor/configs/: default.yaml
agent-probe-monitor/scripts/: collect_trajectories.py  run_eval.py  train_probes.py
agent-probe-monitor/slurm/: collect.sbatch  train.sbatch
agent-probe-monitor/src/probemon/: __init__.py  agentdojo_env.py  baselines.py  datasets.py  evaluate.py  hooks.py  labeling.py  probes.py  utils.py
agent-probe-monitor/tests/: test_core.py
clarity-evasion/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
clarity-evasion/clarity_evasion/: __init__.py
clarity-evasion/clarity_evasion/cli/: eda.py  evaluate.py  train.py
clarity-evasion/clarity_evasion/data/: __init__.py  dataset.py  taxonomy.py
clarity-evasion/clarity_evasion/models/: __init__.py  aggregation.py  components.py
clarity-evasion/clarity_evasion/pipelines/: __init__.py  direct.py  evaluate.py  evasion.py  reverse.py  training_args.py
clarity-evasion/clarity_evasion/utils/: __init__.py  config.py  metrics.py  seeding.py
clarity-evasion/configs/: base.yaml  direct.yaml  evasion_baseline.yaml  evasion_joint.yaml  reverse.yaml
clarity-evasion/docs/: DESIGN.md
clarity-evasion/scripts/: prefetch.sh  run_local.sh  setup_env.sh
clarity-evasion/tests/: test_data.py  test_taxonomy_and_aggregation.py
eval-awareness/: .gitignore  QUICKSTART.md  README.md  Runbook.md  pyproject.toml  requirements.txt
eval-awareness/configs/: default.yaml
eval-awareness/scripts/: 01_generate_dataset.py  02_extract_activations.py  03_train_probes.py  04_behavior_gap.py  05_steering_experiment.py  download_models.py  make_figures.py
qud-evasion/: .gitignore  Progress.md  README.md  activate_mmd2.sh  pyproject.toml  requirements.txt
qud-evasion/configs/: base.yaml  baseline_encoder.yaml  baseline_llm.yaml  qud_pipeline.yaml
qud-evasion/notebooks/: README.md
qud-evasion/scripts/: 00_prepare_data.sh  01_train_encoder_baseline.sh  02_llm_baseline.sh  03_qud_pipeline.sh  04_final_evaluation.sh  05_fusion.sh  06_fusion_task2_multiseed.sh  07_prompt_sweep.sh  08_probe.sh  _env.sh  fusion_experiment.py  fusion_experiment_task2.py  make_prompt_configs.sh  plot_probe.py  probe_experiment.py  probe_experiment_v2.py
qud-evasion/tests/: test_parse_json.py  test_splits.py  test_taxonomy.py
(+48 files in other folders)
