[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "probemon"
version = "0.1.0"
description = "White-box runtime monitoring for LLM agents via activation probes"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "accelerate>=0.33",
    "agentdojo>=0.1",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
