[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-awareness"
version = "0.1.0"
description = "Detecting and causally steering evaluation-awareness in open-weight LLMs"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
