[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qud-evasion"
version = "0.1.0"
description = "QUD-based political question evasion detection on the CLARITY task (QEvasion)"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
qud-evasion = "qud_evasion.cli:main"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
